Change key type on hash maps, add missing logic in Railroad